syntax = "proto3";

option go_package = "/proto/rpm";

package proto;

service DataTransferService {
    rpc TransferData(DataTransferPayload) returns (DataTransferPaystub); 
}

message DataTransferPayload {
    bool IsFine = 1;
    string Data = 2;
    string Action = 3;
}

message DataTransferPaystub {
    bool Ack = 1;
}
